Add batch model converter and update build system
- convert_all.py: Batch convert all PyTorch models efficiently
- Makefile: Auto-copy available models (stories15M + nanogpt)
- Increase disk image to 640MB for multiple models
- .gitignore: Add Python cache files

✅ NanoGPT-124M (471MB) converted successfully
✅ stories15M (60MB) ready
⏳ TinyLlama needs re-download (incomplete)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ qemu_output_captured.txt
 screenshot_output.txt
 qemu_screenshot.log
 qemu_*.txt
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.pytest_cache/
