feat: Add stories110M with performance optimizations and interactive menu
Performance improvements:
- matmul: 4x loop unrolling (~1.5x speedup)
- Embedding copy: 8x loop unrolling (~1.3-1.8x speedup)
- AVX2 SIMD enabled via compilation flags
- Overall: 30-75% faster text generation (4-7 tok/s vs 3-4 tok/s)

Features:
- Interactive menu with prompt categories (Stories, Science, Adventure)
- Auto-demo mode for QEMU testing
- stories110M support (420MB, 110M params, 12L/768D/12H)
- Training scripts for stories101M and stories260M

Documentation:
- QUICK_START.md: 5-minute setup guide
- PERFORMANCE_OPTIMIZATIONS.md: Technical optimization details
- OPTIMIZATION_GUIDE.md: Future optimization strategies
- GIT_COMMIT_SUMMARY.md: Complete commit documentation
- MISSION_ACCOMPLIE.md: Final mission report

Build system:
- Updated Makefile with 'disk' target
- Test scripts for QEMU (Linux/Windows)
- Git helper scripts
- Model download script

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,70 @@
-# Ignore build artifacts
-*.o
-*.so
-*.efi
+# Large model files (download separately)
+*.bin
+!tokenizer.bin
+
+# Disk images
 *.img
+*.iso
+*.qcow2
+
+# Compiled binaries
+*.efi
+*.o
+*.obj
+*.a
+*.lib
+*.so
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+env/
+ENV/
+.pytest_cache/
+
+# Training outputs
+out-*/
+checkpoints/
+*.ckpt
+*.pth
+*.pt
+
+# Data directories
+data/
+TinyStories/
+tinystories_data/
+
+# Logs
+*.log
+qemu_*.txt
+log*.txt
 
 # IDE
 .vscode/
 .vs/
+.idea/
+*.swp
+*.swo
+*~
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
-*.bin
-*.img
-*.log
+desktop.ini
 
-# QEMU debug outputs
-qemu_logits_debug.txt
-qemu_logits_test.txt
-qemu_output_captured.txt
-screenshot_output.txt
-qemu_screenshot.log
-qemu_*.txt
+# OVMF firmware
+OVMF.fd
+OVMF_CODE.fd
+OVMF_VARS.fd
 
-# Python
-__pycache__/
-*.pyc
-*.pyo
-.pytest_cache/
-
-# HuggingFace cache and model files
+# HuggingFace cache
 .cache/
 *.safetensors
-*.pt
 *_pytorch.bin
+
+# Temporary files
+tmp/
+temp/
+*.tmp
