docs: Complete project documentation and cleanup
- Added comprehensive ROADMAP.md with Phases 10-19
- Enhanced README.md with badges, better structure
- Updated .gitignore to exclude temporary files
- Cleaned up build artifacts and test scripts

Future roadmap includes:
- Phase 10: Interactive multi-model selection
- Phase 11: Advanced persistent storage
- Phase 12: Network stack (TCP/IP)
- Phase 13: GPU offload
- Phase 14: AVX-512 + multithreading
- Phase 15: More models (Llama2-7B, Mistral, Phi)
- Phase 16: Prompt engineering
- Phase 17: Context window extension
- Phase 18-19: Developer tools + advanced features

Project ready for v1.0 release

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,15 @@ OVMF_VARS.fd
 tmp/
 temp/
 *.tmp
+
+# Test scripts (generated)
+full-test.sh
+just-build.sh
+quick-demo.ps1
+rebuild-and-test.ps1
+rebuild.py
+STATUS_REPORT.md
+
+# Build artifacts
+build*.log
+mnt/
