Add persistent diagnostics, optional repl.cfg, /version command
- Add Flush() before Close() for all file writes (llmk-dump.txt, llmk-log.txt, llmk-failsafe.txt) to ensure persistence after reboot
- Create repl.cfg.example template for sampling/budgets/attn defaults
- Update .gitignore to exclude personal repl.cfg
- Auto-copy repl.cfg to boot image if present (create-boot-mtools.sh)
- Add /version command showing build date and features
- Expand README with Configuration section and full REPL Commands reference
- Document all dump files (llmk-log.txt, llmk-dump.txt, llmk-failsafe.txt)

Tested on hardware: AVX2+FMA SGEMM, ~26-32 tok/s, dumps persist after hard reboot.
Made in Senegal by Djiby Diop.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ OVMF.fd
 qemu*.txt
 DIAGNOSTIC.md
 
+# Local REPL config (publish repl.cfg.example instead)
+repl.cfg
+
 # Local archived artifacts
 artifacts/
 
