Add autorun-based QEMU smoke test

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Images (on GitHub Releases only)
 *.img
+llmk-autorun.txt
 
 # Models (on GitHub Releases only)
 *.bin
@@ -50,6 +51,7 @@ GITHUB_UPLOAD.md
 serve_model.py
 test-*.ps1
 !test-qemu.ps1
+!test-qemu-autorun.ps1
 
 # Local notes (keep repo clean)
 CHAT_REPL_SUCCESS.md
