--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.img filter=lfs diff=lfs merge=lfs -text
 *.efi filter=lfs diff=lfs merge=lfs -text
+
+# Keep bash scripts usable from WSL/Linux
+*.sh text eol=lf
+
+# PowerShell scripts are typically CRLF on Windows
+*.ps1 text eol=crlf
