--- a/repl.cfg.example
+++ b/repl.cfg.example
@@ -26,6 +26,11 @@ splash_ms=5000
 attn=auto               # Attention SIMD (auto|sse2|avx2)
 strict_budget=0         # Hard-stop on budget overrun (0=log only, 1=trip sentinel)
 
+# Q8_0 blob perf option
+# When using GGUF Q8_0 blob weights, you can optionally quantize activations too.
+# This is faster on real AVX2 hardware, but adds extra approximation.
+q8_act_quant=0          # 0=off, 1=all matmuls, 2=FFN-only (w1/w3/w2)
+
 # Autorun (disabled by default)
 # If you want to auto-run a script at boot, set this and provide llmk-autorun.txt on the boot volume.
 # autorun_autostart=1
