--- a/.github/workflows/llm-baremetal-release-x86_64.yml
+++ b/.github/workflows/llm-baremetal-release-x86_64.yml
@@ -26,13 +26,13 @@ jobs:
             xz-utils coreutils
 
       - name: Build UEFI binary
-        working-directory: llm-baremetal
+        working-directory: .
         run: |
           make clean
           make repl
 
       - name: Create no-model boot image
-        working-directory: llm-baremetal
+        working-directory: .
         run: |
           # Ensure the release image does not hardcode a model path.
           cat > repl.cfg <<'EOF'
@@ -46,7 +46,7 @@ jobs:
           mv -f llm-baremetal-boot.img llm-baremetal-boot-nomodel-x86_64.img
 
       - name: Compress + checksum
-        working-directory: llm-baremetal
+        working-directory: .
         run: |
           xz -T0 -9e -k llm-baremetal-boot-nomodel-x86_64.img
           sha256sum \
@@ -60,16 +60,16 @@ jobs:
         with:
           name: llm-baremetal-x86_64
           path: |
-            llm-baremetal/llama2.efi
-            llm-baremetal/llm-baremetal-boot-nomodel-x86_64.img
-            llm-baremetal/llm-baremetal-boot-nomodel-x86_64.img.xz
-            llm-baremetal/SHA256SUMS.txt
+            llama2.efi
+            llm-baremetal-boot-nomodel-x86_64.img
+            llm-baremetal-boot-nomodel-x86_64.img.xz
+            SHA256SUMS.txt
 
       - name: Attach to GitHub Release (tags only)
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            llm-baremetal/llama2.efi
-            llm-baremetal/llm-baremetal-boot-nomodel-x86_64.img.xz
-            llm-baremetal/SHA256SUMS.txt
+            llama2.efi
+            llm-baremetal-boot-nomodel-x86_64.img.xz
+            SHA256SUMS.txt
