docs: add 8GB conversational guidance

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ repl.cfg
 # Local archived artifacts
 artifacts/
 
+# Local image scratch dir
+bootable_img_temp/
+
 # Local backups
 *.bak
 *.backup
