test: make autorun harness robust

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ GITHUB_UPLOAD.md
 serve_model.py
 test-*.ps1
 
+# Keep the main autorun harness tracked
+!test-qemu-autorun.ps1
+
 
 
 # Local notes (keep repo clean)
