--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ test-*.ps1
 
 # Keep the main autorun harness tracked
 !test-qemu-autorun.ps1
+!test-qemu-manual-smoke.ps1
 
 
 
@@ -139,3 +140,6 @@ write-usb-admin.ps1
 __pycache__/
 *.pyc
 .venv/
+
+# Local toolchains (downloaded, not tracked)
+tools/_toolchains/
