--- a/.github/workflows/m8-reliability.yml
+++ b/.github/workflows/m8-reliability.yml
@@ -30,6 +30,15 @@ jobs:
         run: |
           ./m8-reliability.ps1 -SkipPreflight -SkipBuild
 
+      - name: Run M9 static guardrails on latest runtime log (if present)
+        shell: pwsh
+        run: |
+          if (Test-Path artifacts/m8/m8-qemu-serial.log) {
+            ./m9-guardrails.ps1 -LogPath artifacts/m8/m8-qemu-serial.log -MaxModelSelectMs 5000 -MaxModelPrepareMs 30000
+          } else {
+            Write-Host "[CI] No runtime log artifact in workspace; skipping M9 log parsing on hosted runner."
+          }
+
   m8-runtime:
     name: M8 runtime pass (self-hosted)
     needs: m8-static
@@ -47,7 +56,7 @@ jobs:
           if ('${{ inputs.timeout_sec }}' -match '^[0-9]+$') {
             $timeout = [int]'${{ inputs.timeout_sec }}'
           }
-          ./m8-reliability.ps1 -RunQemu -TimeoutSec $timeout -Accel tcg -MemMB 3072
+          ./m8-reliability.ps1 -RunQemu -TimeoutSec $timeout -Accel tcg -MemMB 3072 -MaxModelSelectMs 5000 -MaxModelPrepareMs 30000
 
       - name: Upload runtime log
         if: always()
