--- a/.github/workflows/m8-reliability.yml
+++ b/.github/workflows/m8-reliability.yml
@@ -65,3 +65,11 @@ jobs:
           name: m8-runtime-log
           path: artifacts/m8/m8-qemu-serial.log
           if-no-files-found: warn
+
+      - name: Upload M9 history
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: m9-history
+          path: artifacts/m9/history.jsonl
+          if-no-files-found: warn
