M11.1 couple self-heal release with M9 and M10 windows

--- a/.github/workflows/m8-reliability.yml
+++ b/.github/workflows/m8-reliability.yml
@@ -82,6 +82,14 @@ jobs:
           path: artifacts/m10/quarantine-state.json
           if-no-files-found: warn
 
+      - name: Upload M10 history
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: m10-history
+          path: artifacts/m10/history.jsonl
+          if-no-files-found: warn
+
       - name: Upload M11 release state
         if: always()
         uses: actions/upload-artifact@v4
