--- a/.github/workflows/m8-reliability.yml
+++ b/.github/workflows/m8-reliability.yml
@@ -137,3 +137,19 @@ jobs:
           name: m13-explainability-history
           path: artifacts/m13/history.jsonl
           if-no-files-found: warn
+
+      - name: Upload M14 coverage state
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: m14-coverage-state
+          path: artifacts/m14/coverage-state.json
+          if-no-files-found: warn
+
+      - name: Upload M14 coverage history
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: m14-coverage-history
+          path: artifacts/m14/history.jsonl
+          if-no-files-found: warn
