--- a/.github/workflows/m8-reliability.yml
+++ b/.github/workflows/m8-reliability.yml
@@ -1,4 +1,4 @@
-name: M8 Reliability
+name: Reliability
 
 on:
   push:
@@ -28,13 +28,13 @@ jobs:
       - name: Run static reliability pass
         shell: pwsh
         run: |
-          ./m8-reliability.ps1 -SkipPreflight -SkipBuild
+          ./reliability.ps1 -SkipPreflight -SkipBuild
 
       - name: Run M9 static guardrails on latest runtime log (if present)
         shell: pwsh
         run: |
           if (Test-Path artifacts/m8/m8-qemu-serial.log) {
-            ./m9-guardrails.ps1 -LogPath artifacts/m8/m8-qemu-serial.log -MaxModelSelectMs 5000 -MaxModelPrepareMs 30000
+            ./.ops/milestones/m9-guardrails.ps1 -LogPath artifacts/m8/m8-qemu-serial.log -MaxModelSelectMs 5000 -MaxModelPrepareMs 30000
           } else {
             Write-Host "[CI] No runtime log artifact in workspace; skipping M9 log parsing on hosted runner."
           }
@@ -56,7 +56,7 @@ jobs:
           if ('${{ inputs.timeout_sec }}' -match '^[0-9]+$') {
             $timeout = [int]'${{ inputs.timeout_sec }}'
           }
-          ./m8-reliability.ps1 -RunQemu -TimeoutSec $timeout -Accel tcg -MemMB 3072 -MaxModelSelectMs 5000 -MaxModelPrepareMs 30000 -MaxHarmfulRatioPct 50 -MaxConsecutiveFailures 3 -MinAutoApplySamples 1 -M14RequireJournalParity
+          ./reliability.ps1 -RunQemu -TimeoutSec $timeout -Accel tcg -MemMB 3072 -MaxModelSelectMs 5000 -MaxModelPrepareMs 30000 -MaxHarmfulRatioPct 50 -MaxConsecutiveFailures 3 -MinAutoApplySamples 1 -M14RequireJournalParity
 
       - name: Upload runtime log
         if: always()
