M17: CI integration with automated metrics reporting
- m17-ci-metrics-report.ps1: generates CI-friendly performance reports
  - Compact text + Markdown output
  - Drift analysis with separate warn/fail thresholds (default: 15%/30%)
  - GitHub Actions job summary integration (tables + status emoji)
  - Optional failure gate with -FailOnDrift
  - Helper function Format-Cycles for human-readable output

- GitHub Actions workflow (.github/workflows/m8-reliability.yml):
  - Post-runtime step: auto-extract LLMK_METRICS.LOG from bootable image
  - Generate M17 report with drift detection
  - Upload artifacts: raw metrics JSON + text report for traceability
  - Job summary integration: performance tables visible in GitHub UI

- Integration in m8-reliability.ps1:
  - Flag -M17EnableCIReport activates report generation post-extraction
  - Auto-detection of latest metrics file if not specified
  - Configurable thresholds exposed via parameters
  - Non-blocking by default (warn on drift, fail only with -M17FailOnDrift)

- Integration in reliability.ps1:
  - M17 parameters (M17EnableCIReport, M17WarnThresholdPct, M17FailThresholdPct, M17FailOnDrift)
  - Full forwarding to internal orchestrator

- Tested with sample metrics:
  - Baseline metrics: 300k cycles/token (prefill), 125k (decode)
  - Degraded metrics: 385k prefill (+28%), 167k decode (+33%)
  - Report correctly identifies FAIL status and gates with -FailOnDrift

- Docs: INNOVATIONS_NEXT.md + AMELIORATIONS_APPORTEES.md updated

Result: Continuous performance traceability in CI, visual drift alerts, artifact history for regression analysis

--- a/.github/workflows/m8-reliability.yml
+++ b/.github/workflows/m8-reliability.yml
@@ -217,3 +217,35 @@ jobs:
           name: m151-dashboard-history
           path: artifacts/m15/dashboard-history.jsonl
           if-no-files-found: warn
+
+      - name: Extract M16.1 runtime metrics from bootable image
+        if: always()
+        shell: pwsh
+        run: |
+          ./.ops/milestones/m16-extract-metrics.ps1 -ImagePath llm-baremetal-boot.img -OutputDir artifacts/m16/raw -OutputFilename metrics_ci_latest.json
+
+      - name: Generate M17 CI metrics report
+        if: always()
+        shell: pwsh
+        run: |
+          if (Test-Path artifacts/m16/raw/metrics_ci_latest.json) {
+            ./.ops/milestones/m17-ci-metrics-report.ps1 -MetricsFile artifacts/m16/raw/metrics_ci_latest.json -OutputPath artifacts/m17/ci-metrics-report.txt -WarnThresholdPct 0.15 -FailThresholdPct 0.30
+          } else {
+            Write-Host "[CI] No metrics file extracted; skipping M17 report generation."
+          }
+
+      - name: Upload M16 extracted metrics
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: m16-runtime-metrics
+          path: artifacts/m16/raw/metrics_ci_latest.json
+          if-no-files-found: warn
+
+      - name: Upload M17 CI metrics report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: m17-ci-metrics-report
+          path: artifacts/m17/ci-metrics-report.txt
+          if-no-files-found: warn
